--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <header class="header">
@@ -117,29 +121,30 @@
                         <img src="images/Rectangle 13.png" alt="">
                         <h4>Arcade Games</h4>
                     </div>
-                    <div class="g-name">
+                    <div class="g-name invisible">
                         <img src="images/Rectangle 14.png" alt="">
                         <h4>Educational Games</h4>
                     </div>
-                    <div class="g-name">
+                    <div class="g-name invisible">
                         <img src="images/Rectangle 15.png" alt="">
                         <h4>Word Games</h4>
                     </div>
+                    
                 </div>
                 <div class="next-4">
                     <div class="g-name">
-                        <img src="images/Rectangle 16.png" alt="">
-                        <h4>Role Palying Games</h4>
+                        <img src="images/Rectangle 18.png" alt="">
+                        <h4>Puzzle Games</h4>
                     </div>
                     <div class="g-name">
                         <img src="images/Rectangle 17.png" alt="">
                         <h4>Music & Audio Games</h4>
                     </div>
                     <div class="g-name">
-                        <img src="images/Rectangle 18.png" alt="">
-                        <h4>Puzzle Games</h4>
+                        <img src="images/Rectangle 16.png" alt="">
+                        <h4>Role Palying Games</h4>
                     </div>
-                    <div class="g-name">
+                    <div class="g-name invisible">
                         <img src="images/Rectangle 19.png" alt="">
                         <h4>Strategy Games</h4>
                     </div>
@@ -149,7 +154,38 @@
     </main>
 
     <footer class="footer">
-        
+        <div class="f-items">
+            <div class="f-title">
+                <img src="images/Frame.png" alt="">
+                <h2><span>G</span>amer</h2>
+            </div>
+            <div class="f-links">
+                <a href="#">Our Story</a>
+                <a href="#">Games</a>
+                <a href="#">Web Games</a>
+                <a href="#">Careers</a>
+                <a href="#">Support</a>
+                <a href="#">My Account</a>
+            </div>
+            <div class="f-medea">
+                <img src="logo/580b57fcd9996e24bc43c53e.png" alt="">
+                <img src="logo/fb_icon_325x325.png" alt="">
+                <img src="logo/pngtree-youtube-social-media-round-icon-png-image_6315993.png" alt="">
+                <img src="logo/linkedin-icon-1-logo-png-transparent.png" alt="">
+                <img src="logo/instagram-icon-png-white-2.jpg" alt="">
+                <img src="logo/apple-logo-transparent.png" alt="">
+            </div>
+            <div class="f-policy">
+                <a href="#">Terms and Conditions</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Cookie Policy</a>
+                <a href="#">Privacy Settings</a>
+            </div>
+            <div class="copy-right">
+                <p>Play Games @ Gamer</p>
+                <p>@ 2000-2023 Gamer Bangladesh</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
