--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <div class="h-right">
                 <p>About Us</p>
                 <p>Developers</p>
-                <div>
+                <div class="h-logo">
                     <p>Follow Us On</p>
+                    <img src="logo/pngtree-youtube-social-media-round-icon-png-image_6315993.png" alt="">
+                    <img src="logo/fb_icon_325x325.png" alt="">
                 </div>
             </div>
         </div>
