--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
                 <h2><span>G</span>amer</h2>
             </div>
             <div class="h-right">
-                <p>About Us</p>
-                <p>Developers</p>
+                <a href="#">About Us</a>
+                <a href="#">Developers</a>
                 <div class="h-logo">
                     <p>Follow Us On</p>
-                    <img src="logo/pngtree-youtube-social-media-round-icon-png-image_6315993.png" alt="">
-                    <img src="logo/fb_icon_325x325.png" alt="">
+                    <a href="#">
+                        <img src="logo/pngtree-youtube-social-media-round-icon-png-image_6315993.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="logo/fb_icon_325x325.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
@@ -34,7 +38,7 @@
             <div class="b-items">
                 <div class="b-left">
                     <h2>Play Like The</h2>
-                    <h1>G.O.A.T</h1>
+                    <h1>G.O.A.T.</h1>
                     <p>1-Click instant play</p>
                     <p>No Download</p>
                     <p>1000s of supported online games</p>
@@ -102,7 +106,7 @@
                 </div>
                 <div class="p-right">
                     <div class="p-img">
-                        <img class="p-1" src="images/Rectangle 55.png" alt="">
+                        <img class="p-1" src="images/Untitled design.png" alt="">
                     </div>
                 </div>
             </div>
